Add link task