@@ -22,3 +22,15 @@ jar {
                 'Main-Class': 'App')
     }
 }
+
+def java_home = System.getenv('JAVA_HOME')
+task link(type: Exec) {
+    dependsOn 'clean'
+    dependsOn 'jar'
+
+    workingDir 'build'
+
+    commandLine "${java_home}/bin/jlink", '--module-path', "${java_home}/jmods${File.pathSeparatorChar}libs",
+            '--add-modules', 'macro', '--launcher', 'macro=macro/cli.App', '--output', 'dist', '--strip-debug',
+            '--compress', '2', '--no-header-files', '--no-man-pages'
+}
